syntax = "proto3";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.aggregator.api;

option java_outer_classname = "SecondApi";

service Second {
  option (kalix.codegen) = {
    event_sourced_entity: {
      name: "io.aggregator.entity.Second"
      entity_type: "second"
      state: "io.aggregator.entity.SecondState"
      events: [
        "io.aggregator.entity.SecondActivated",
        "io.aggregator.entity.StripedSecondAdded",
        "io.aggregator.entity.SecondAggregationRequested",
        "io.aggregator.entity.SecondAggregated",
        "io.aggregator.entity.ActiveStripedSecondAggregated"  //
      ]
    }
  };

  rpc ActivateStripedSecond(ActivateStripedSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/add-striped-second"
      body: "*"
    };
  }

  rpc AggregateSecond(AggregateSecondCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/aggregate-second"
      body: "*"
    };
  }

  rpc StripedSecondAggregation(StripedSecondAggregationCommand) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/second/-striped-second-aggregation"
      body: "*"
    };
  }
}

message ActivateStripedSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_second = 5 [(kalix.field).entity_key = true];
  int32 stripe = 6;
}

message AggregateSecondCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_second = 5 [(kalix.field).entity_key = true];
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message StripedSecondAggregationCommand {
  string merchant_id = 1 [(kalix.field).entity_key = true];
  string service_code = 2 [(kalix.field).entity_key = true];
  string account_from = 3 [(kalix.field).entity_key = true];
  string account_to = 4 [(kalix.field).entity_key = true];
  int64 epoch_second = 5 [(kalix.field).entity_key = true];
  int32 stripe = 6;
  double transaction_total_amount = 7;
  int32 transaction_count = 8;
  google.protobuf.Timestamp last_update_timestamp = 9;
  google.protobuf.Timestamp aggregate_request_timestamp = 10;
  string payment_id = 11;
}
